load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//heyp:__subpackages__"],
)

cc_library(
    name = "debug-output-logger",
    srcs = ["debug-output-logger.cc"],
    hdrs = ["debug-output-logger.h"],
    deps = [
        "//heyp/posix:strerror",
        "@com_google_absl//absl/cleanup",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "file",
    hdrs = ["file.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_ortools//ortools/base:file",
    ],
)

cc_library(
    name = "look-path",
    srcs = ["look-path.cc"],
    hdrs = ["look-path.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "subprocess",
    srcs = ["subprocess.cc"],
    hdrs = ["subprocess.h"],
    deps = [
        ":look-path",
        "//heyp/log:spdlog",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
    ],
)

cc_test(
    name = "look-path-test",
    srcs = ["look-path-test.cc"],
    deps = [
        ":look-path",
    ],
)

cc_test(
    name = "subprocess-test",
    srcs = ["subprocess-test.cc"],
    data = [
        "//heyp/io/testdata:test_echo",
        "//heyp/io/testdata:test_echo_argv_1",
        "//heyp/io/testdata:test_noop",
        "//heyp/io/testdata:test_stderr",
    ],
    deps = [
        ":subprocess",
        "//heyp/init:test-main",
        "@com_google_absl//absl/strings",
    ],
)
