load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:cc_defs.bzl", "heyp_cc_binary")

cc_library(
    name = "spdlog",
    srcs = ["spdlog.cc"],
    hdrs = ["spdlog.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gabime_spdlog//:spdlog",
        "@com_google_absl//absl/debugging:symbolize",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "debug",
    srcs = ["debug.cc"],
    hdrs = ["debug.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":spdlog",
        "//heyp/io:subprocess",
    ],
)

heyp_cc_binary(
    name = "example_check_main",
    srcs = ["example_check_main.cc"],
    deps = [
        ":spdlog",
        "//heyp/init",
    ],
)
