load("@rules_cc//cc:defs.bzl", "cc_library", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

package(default_visibility = ["//heyp:__subpackages__"])

proto_library(
    name = "heyp_proto",
    srcs = ["heyp.proto"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
    ],
)

cc_proto_library(
    name = "heyp_cc_proto",
    deps = [":heyp_proto"],
)

cc_grpc_library(
    name = "heyp_cc_grpc",
    srcs = [":heyp_proto"],
    grpc_only = True,
    deps = [":heyp_cc_proto"],
)

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    deps = [":heyp_proto"],
)

cc_proto_library(
    name = "config_cc_proto",
    deps = [":config_proto"],
)

proto_library(
    name = "app_proto",
    srcs = ["app.proto"],
)

cc_proto_library(
    name = "app_cc_proto",
    deps = [":app_proto"],
)

proto_library(
    name = "integration_proto",
    srcs = ["integration.proto"],
)

cc_proto_library(
    name = "integration_cc_proto",
    deps = [":integration_proto"],
)

proto_library(
    name = "stats_proto",
    srcs = ["stats.proto"],
)

cc_proto_library(
    name = "stats_cc_proto",
    deps = [":stats_proto"],
)

cc_library(
    name = "alg",
    srcs = ["alg.cc"],
    hdrs = ["alg.h"],
    deps = [
        ":heyp_cc_proto",
        "@com_google_absl//absl/hash",
    ],
)

cc_library(
    name = "constructors",
    hdrs = ["constructors.h"],
    deps = [
        ":heyp_cc_proto",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "fileio",
    srcs = ["fileio.cc"],
    hdrs = ["fileio.h"],
    deps = [
        "//heyp/posix:strerror",
        "@com_google_absl//absl/status",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "parse-text",
    hdrs = ["parse-text.h"],
    deps = [
        "//heyp/log",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "testing",
    testonly = True,
    hdrs = ["testing.h"],
    deps = [
        ":alg",
        "@gtest",
    ],
)
