load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:cc_defs.bzl", "heyp_cc_binary")

package(
    default_visibility = ["//visibility:public"],
)

heyp_cc_binary(
    name = "hdrhist2csv",
    srcs = ["hdrhist2csv.cc"],
    deps = [
        "//heyp/init",
        "//heyp/proto:fileio",
        "//heyp/stats:hdrhistogram",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "cdf",
    hdrs = ["cdf.h"],
)

cc_library(
    name = "hdrhistogram",
    srcs = ["hdrhistogram.cc"],
    hdrs = ["hdrhistogram.h"],
    deps = [
        ":cdf",
        "//heyp/log",
        "//heyp/posix:strerror",
        "//heyp/proto:stats_cc_proto",
        "@com_google_absl//absl/status",
        "@hdrhistogram_c",
    ],
)

cc_library(
    name = "recorder",
    srcs = ["recorder.cc"],
    hdrs = ["recorder.h"],
    deps = [
        ":hdrhistogram",
        "//heyp/log",
        "//heyp/posix:strerror",
        "//heyp/proto:ndjson-logger",
        "//heyp/proto:stats_cc_proto",
        "//heyp/threads:executor",
        "@com_google_absl//absl/container:btree",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/time",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "hdrhistogram-test",
    srcs = ["hdrhistogram-test.cc"],
    deps = [
        ":hdrhistogram",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
    ],
)
