load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//heyp:__subpackages__"],
)

cc_library(
    name = "executor",
    srcs = ["executor.cc"],
    hdrs = ["executor.h"],
    linkopts = ["-pthread"],
    deps = [
        ":set-name",
        ":waitgroup",
        "//heyp/log:spdlog",
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/synchronization",
    ],
)

cc_library(
    name = "lossy-queue",
    hdrs = ["lossy-queue.h"],
    deps = [
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/synchronization",
    ],
)

cc_library(
    name = "mutex-helpers",
    hdrs = ["mutex-helpers.h"],
    deps = [
        "//heyp/log:spdlog",
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "par-indexed-map",
    hdrs = ["par-indexed-map.h"],
    deps = [
        "//heyp/log:spdlog",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
    ],
)

cc_library(
    name = "set-name",
    srcs = ["set-name.cc"],
    hdrs = ["set-name.h"],
    linkopts = ["-pthread"],
)

cc_library(
    name = "waitgroup",
    srcs = ["waitgroup.cc"],
    hdrs = ["waitgroup.h"],
    linkopts = ["-pthread"],
    deps = [
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/synchronization",
    ],
)

cc_test(
    name = "executor-test",
    srcs = ["executor-test.cc"],
    args = ["--gtest_repeat=20"],
    deps = [
        ":executor",
        "//heyp/init:test-main",
    ],
)

cc_test(
    name = "par-indexed-map-test",
    srcs = ["par-indexed-map-test.cc"],
    deps = [
        ":par-indexed-map",
        "//heyp/init:test-main",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/random",
    ],
)

cc_test(
    name = "waitgroup-test",
    srcs = ["waitgroup-test.cc"],
    args = ["--gtest_repeat=50"],
    deps = [
        ":waitgroup",
        "//heyp/init:test-main",
    ],
)
