load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//heyp:__subpackages__"],
)

cc_library(
    name = "iface",
    srcs = ["iface.cc"],
    hdrs = ["iface.h"],
    deps = [
        ":formatters",
        "//heyp/alg:agg-info-views",
        "//heyp/alg:debug",
        "//heyp/alg:unordered-ids",
        "//heyp/log:spdlog",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "impl-hashing",
    srcs = [
        "impl-hashing.cc",
    ],
    hdrs = [
        "impl-hashing.h",
    ],
    deps = [
        ":formatters",
        ":hash-ring",
        ":iface",
        "//heyp/alg:debug",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "impl-heyp-sigcomm-20",
    srcs = [
        "impl-heyp-sigcomm-20.cc",
    ],
    hdrs = [
        "impl-heyp-sigcomm-20.h",
    ],
    deps = [
        ":formatters",
        ":greedy-assign",
        ":iface",
        "//heyp/alg:debug",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "impl-knapsack-solver",
    srcs = [
        "impl-knapsack-solver.cc",
    ],
    hdrs = [
        "impl-knapsack-solver.h",
    ],
    deps = [
        ":formatters",
        ":iface",
        "//heyp/alg:debug",
        "@com_google_absl//absl/strings",
        "@com_google_ortools//ortools/algorithms:knapsack_solver_lib",
    ],
)

cc_library(
    name = "impl-largest-first",
    srcs = [
        "impl-largest-first.cc",
    ],
    hdrs = [
        "impl-largest-first.h",
    ],
    deps = [
        ":formatters",
        ":greedy-assign",
        ":iface",
        "//heyp/alg:debug",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "formatters",
    hdrs = ["formatters.h"],
    deps = [
        "//heyp/proto:formatter",
    ],
)

cc_library(
    name = "hash-ring",
    srcs = ["hash-ring.cc"],
    hdrs = ["hash-ring.h"],
    deps = [
        "//heyp/alg:unordered-ids",
        "@com_google_absl//absl/numeric:int128",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "greedy-assign",
    hdrs = ["greedy-assign.h"],
    deps = [
        "//heyp/alg:agg-info-views",
    ],
)

cc_test(
    name = "iface-test",
    srcs = ["iface-test.cc"],
    deps = [
        ":iface",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
    ],
)

cc_test(
    name = "hash-ring-test",
    srcs = ["hash-ring-test.cc"],
    deps = [
        ":hash-ring",
        "//heyp/init:test-main",
    ],
)

cc_test(
    name = "greedy-assign-test",
    srcs = ["greedy-assign-test.cc"],
    deps = [
        ":greedy-assign",
        "//heyp/init:test-main",
        "@com_google_absl//absl/functional:bind_front",
    ],
)
