load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "server",
    srcs = ["server.cc"],
    copts = ["-fno-strict-aliasing"],
    malloc = "@com_google_tcmalloc//tcmalloc",
    deps = [
        "//heyp/encoding:binary",
        "//third_party/libuv",
        "@com_google_absl//absl/strings:str_format",
    ],
)
