load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//heyp/cluster-agent:__subpackages__"],
)

cc_library(
    name = "interface",
    hdrs = [
        "interface.h",
    ],
    deps = [
        "//heyp/proto:heyp_cc_proto",
        "//heyp/proto:monitoring_cc_proto",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "impl-bwe",
    srcs = ["impl-bwe.cc"],
    hdrs = ["impl-bwe.h"],
    deps = [
        ":interface",
        ":util",
        "//heyp/alg:rate-limits",
        "//heyp/alg/fairness:max-min-fairness",
        "//heyp/log:spdlog",
        "//heyp/proto:config_cc_proto",
        "//heyp/proto:heyp_cc_proto",
        "//heyp/proto:monitoring_cc_proto",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "impl-fixed-host-pattern",
    srcs = ["impl-fixed-host-pattern.cc"],
    hdrs = ["impl-fixed-host-pattern.h"],
    deps = [
        ":interface",
        ":util",
        "//heyp/alg:debug",
        "//heyp/log:spdlog",
        "//heyp/proto:config_cc_proto",
        "//heyp/proto:heyp_cc_proto",
        "//heyp/proto:monitoring_cc_proto",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "impl-heyp-sigcomm-20",
    srcs = ["impl-heyp-sigcomm-20.cc"],
    hdrs = ["impl-heyp-sigcomm-20.h"],
    deps = [
        ":interface",
        ":util",
        "//heyp/alg:debug",
        "//heyp/alg:qos-downgrade",
        "//heyp/alg:rate-limits",
        "//heyp/alg/fairness:max-min-fairness",
        "//heyp/log:spdlog",
        "//heyp/proto:config_cc_proto",
        "//heyp/proto:heyp_cc_proto",
        "//heyp/proto:monitoring_cc_proto",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "impl-nop",
    hdrs = ["impl-nop.h"],
    deps = [
        ":interface",
        "//heyp/alg:debug",
        "//heyp/log:spdlog",
    ],
)

cc_library(
    name = "impl-simple-downgrade",
    srcs = ["impl-simple-downgrade.cc"],
    hdrs = ["impl-simple-downgrade.h"],
    deps = [
        ":interface",
        ":util",
        "//heyp/alg:debug",
        "//heyp/alg:qos-downgrade",
        "//heyp/alg:rate-limits",
        "//heyp/alg/fairness:max-min-fairness",
        "//heyp/log:spdlog",
        "//heyp/proto:config_cc_proto",
        "//heyp/proto:heyp_cc_proto",
        "//heyp/proto:monitoring_cc_proto",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "util",
    srcs = ["util.cc"],
    hdrs = ["util.h"],
    deps = [
        "//heyp/log:spdlog",
        "//heyp/proto:alg",
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_test(
    name = "util-test",
    srcs = ["util-test.cc"],
    deps = [
        ":util",
        "//heyp/init:test-main",
    ],
)
